# hippocampus_sim

./: CMakeLists.txt  README.md  package.xml
config/: default.rviz  default_2_vehicles.rviz
include/: gazebo_barometer_water_plugin.h  gazebo_visual_pose_plugin.h
launch/: generate_tank_model.launch  inc_gazebo_base.launch  inc_run_px4_sitl.launch  inc_spawn_uuv_hippocampus.launch  path_following_example.launch  recursive_vehicle_complete.launch  single_vehicle_complete.launch  spawn_apriltag_tank.launch  spawn_uuv_hippocampus.launch  spawn_uuv_hippocampus_without_px4.launch  top_environment.launch  top_path_following_example.launch  top_single_vehicle_complete.launch  top_vehicle_chain_complete.launch
models/apriltag_tank/: model.config  model.sdf
models/tag36_11_00000/: model.config  model.sdf
models/tag36_11_00001/: model.config  model.sdf
models/tag36_11_00002/: model.config  model.sdf
models/tag36_11_00003/: model.config  model.sdf
models/tag36_11_00004/: model.config  model.sdf
models/tag36_11_00005/: model.config  model.sdf
models/tag36_11_00006/: model.config  model.sdf
models/tag36_11_00007/: model.config  model.sdf
models/tag36_11_00008/: model.config  model.sdf
models/tag36_11_00009/: model.config  model.sdf
models/tag36_11_00010/: model.config  model.sdf
models/tag36_11_00011/: model.config  model.sdf
models/tag36_11_00012/: model.config  model.sdf
models/tag36_11_00013/: model.config  model.sdf
models/tag36_11_00014/: model.config  model.sdf
models/tag36_11_00015/: model.config  model.sdf
models/tag36_11_00016/: model.config  model.sdf
models/tag36_11_00017/: model.config  model.sdf
models/tag36_11_00018/: model.config  model.sdf
models/tag36_11_00019/: model.config  model.sdf
models/tag36_11_00020/: model.config  model.sdf
models/tag36_11_00021/: model.config  model.sdf
models/tag36_11_00022/: model.config  model.sdf
models/tag36_11_00023/: model.config  model.sdf
models/tag36_11_00024/: model.config  model.sdf
models/tag36_11_00025/: model.config  model.sdf
models/tag36_11_00026/: model.config  model.sdf
models/tag36_11_00027/: model.config  model.sdf
models/tag36_11_00028/: model.config  model.sdf
models/tag36_11_00029/: model.config  model.sdf
models/tag36_11_00030/: model.config  model.sdf
models/tag36_11_00031/: model.config  model.sdf
models/tag36_11_00032/: model.config  model.sdf
models/tag36_11_00033/: model.config  model.sdf
models/tag36_11_00034/: model.config  model.sdf
models/tag36_11_00035/: model.config  model.sdf
models/tag36_11_00036/: model.config  model.sdf
models/tag36_11_00037/: model.config  model.sdf
models/tag36_11_00038/: model.config  model.sdf
models/tag36_11_00039/: model.config  model.sdf
models/tag36_11_00040/: model.config  model.sdf
models/tag36_11_00041/: model.config  model.sdf
models/tag36_11_00042/: model.config  model.sdf
models/tag36_11_00043/: model.config  model.sdf
models/tag36_11_00044/: model.config  model.sdf
models/tag36_11_00045/: model.config  model.sdf
models/tag36_11_00046/: model.config  model.sdf
models/tag36_11_00047/: model.config  model.sdf
models/tag36_11_00048/: model.config  model.sdf
models/tag36_11_00049/: model.config  model.sdf
models/tag36_11_00050/: model.config  model.sdf
models/tag36_11_00051/: model.config  model.sdf
models/tag36_11_00052/: model.config  model.sdf
models/tag36_11_00053/: model.config  model.sdf
models/tag36_11_00054/: model.config  model.sdf
models/tag36_11_00055/: model.config  model.sdf
models/tag36_11_00056/: model.config  model.sdf
models/tag36_11_00057/: model.config  model.sdf
models/tag36_11_00058/: model.config  model.sdf
nodes/: rviz_visualizer  tank_generator_node
plugins/: gazebo_barometer_water_plugin.cpp  gazebo_visual_pose_plugin.cpp
res/: sdf_frame.sdf  uuv_hippocampus_template.sdf  uuv_joint_template.sdf
scripts/: generate_tag_models  generate_tag_models.py  spawn_vehicle_chain
worlds/: mum.world
(+85 files in other folders)
