<?xml version="1.0"?>
<package format="2">
    <name>hippocampus_sim</name>
    <version>0.0.0</version>
    <description>The simulation package</description>

    <maintainer email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo_ros</depend>
    <depend>gazebo_plugins</depend>
    <depend>hippocampus_msgs</depend>
    <depend>roscpp</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <gazebo plugin_path="${prefix}/lib" />
        <gazebo_ros gazebo_model_path="${prefix}/models" />
        <!-- gazebo_media_path="${prefix}/models" -->
    </export>
</package>
